# krc

./: .clang-format  CMakeLists.txt  LICENSE  README.md  todo
examples/: CMakeLists.txt  channel.cc  context_switch.cc  executor.cc  fibonacci.cc  io.cc  multithreading.cc
lib/: CMakeLists.txt  context.cc  context.hh  executor.cc  executor.hh  ptr_translate.hh
lib/include/: runtime.hh
lib/include/internal/: mutex.hh  ringbuffer.hh  semaphore.hh
src/: CMakeLists.txt  channel.cc  channel.hh  closed_exception.cc  closed_exception.hh  condition_variable.cc  context.cc  context.hh  debug.cc  debug.hh  executor.cc  executor.hh  io.cc  io.hh  multi_executor.cc  multi_executor.hh  mutex.cc  mutex.hh  no_copy.hh  ptr_translate.cc  ptr_translate.hh  queue.cc  queue.hh  ringbuffer.hh  runtime.cc  runtime.hh  semaphore.cc  single_executor.cc  single_executor.hh  zero_queue.cc  zero_queue.hh
src/include/: channel.hh  io.hh  runtime.hh
src/include/internal/: condition_variable.hh  mutex.hh  no_copy.hh  queue.hh  ringbuffer.hh  semaphore.hh  unbuffered.hh  utils.hh  zero_queue.hh
test/: CMakeLists.txt  channel.cc  context.cc  executor.cc  io.cc  multi_executor.cc  mutex.cc  ptr_translate.cc  queue.cc  ringbuffer.cc  semaphore.cc  single_executor.cc  unbuffered.cc  zero_queue.cc
